# MCP_Hackathon

./: README.md  package-lock.json  package.json  tsconfig.json
mcp/src/: client.ts
mcp_client/: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json
mcp_client/py_src/: main.py  pyproject.toml
mcp_client/src/: main.ts
mcp_client/src/types/: env.d.ts  slack.d.ts
mcp_server/: .env.example  package-lock.json  package.json  playbackOptions.json
mcp_server/docs/: setup.md
mcp_server/src/: client.ts  gpt.ts  server.ts
mcp_server/src/data/: campaign_logs.json
mcp_server/src/db/: db.ts
mcp_server/src/db/schemas/: backgrounds.ts
mcp_server/src/spotify/: spotify.ts
music/: list.js
songs/: list.js  list.json
src/: server.ts
src/data/: campaign_logs.json  users.json
src/db/schemas/: users.ts
src/spotify/: dto.ts
utils/: compress_audio.sh
web/: index.html  script.js  styles.css
